version/0.41/_sources/api/solver/_autosummary/settings/file.rst.txt
:orphan:

.. _file:

file
====

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.file
    :show-inheritance:

.. rubric:: Attributes

============================================================================   ====================================================================================================

Attribute                                                                                                                                                                   Summary

============================================================================   ====================================================================================================
:ref:`single_precision_coordinates <single_precision_coordinates>`                                                Specifies whether to write nodal coordinates in single precision.

:ref:`binary_legacy_files <binary_legacy_files>`                                                              Specifies whether to write binary or text format case and data files.

:ref:`cff_files <cff_files>`                                                       Specifies whether to write ANSYS common fluids format (CFF) files or legacy case and data files.

:ref:`auto_merge_zones <auto_merge_zones>`                                                            Specifies whether to merge cell/face zones automatically during case reading.

:ref:`convert_hanging_nodes_during_read <convert_hanging_nodes_during_read>`              Specifies whether meshes with hanging-nodes will be converted to polyhedra while reading.

:ref:`async_optimize <async_optimize>`                                                       Specifies whether to optimize file IO using scratch disks and asynchronous operations.

:ref:`write_pdat <write_pdat>`                                                                                                     Specifies whether to attempt to save pdat files.

:ref:`export <export>`                                                                                                                                                Export files.

:ref:`import_ <import_>`                                                                                                                                              Import files.

:ref:`parametric_project <parametric_project>`                                                                                              Parametric Project Management Commands.

:ref:`cffio_options <cffio_options>`                                                                                                                               CFF I/O options.

:ref:`batch_options <batch_options>`                                                                                                                             The batch options.

:ref:`interpolate <interpolate>`                                                                                                                            The interpolate object.

:ref:`table_file_manager <table_file_manager>`                                                                                                       The table file manager object.

============================================================================   ====================================================================================================

.. rubric:: Methods

====================================================   =======================================================================================================================================================

Method                                                                                                                                                                                                 Summary

====================================================   =======================================================================================================================================================
:ref:`define_macro <define_macro>`                                                                                                                                                Save input to a named macro.

:ref:`execute_macro <execute_macro>`                                                                                                                                           Run a previously defined macro.

:ref:`read_macros <read_macros>`                                                                                                                                           Read macro definitions from a file.

:ref:`read <read>`                                                                                                           Read files of various types. The file type can be case, data, mesh, or case-data.

:ref:`read_case <read_case>`                                                                                                 Read files of various types. The file type can be case, data, mesh, or case-data.

:ref:`read_case_data <read_case_data>`                                                                                       Read files of various types. The file type can be case, data, mesh, or case-data.

:ref:`read_case_lightweight <read_case_lightweight>`                                                                         Read files of various types. The file type can be case, data, mesh, or case-data.

:ref:`read_data <read_data>`                                                                                                 Read files of various types. The file type can be case, data, mesh, or case-data.

:ref:`read_mesh <read_mesh>`                                                                                                 Read files of various types. The file type can be case, data, mesh, or case-data.

:ref:`read_surface_mesh <read_surface_mesh>`                                                                                                                                              Read surface meshes.

:ref:`read_journal <read_journal>`                                                                                                                                                        Read a journal file.

:ref:`start_journal <start_journal>`                                                                                                                                      Start recording all input in a file.

:ref:`start_python_journal <start_python_journal>`                                                                                                                 Start recording all input in a python file.

:ref:`stop_journal <stop_journal>`                                                                                                                            Stop recording input and close the journal file.

:ref:`replace_mesh <replace_mesh>`                                                                    Load a new mesh into your existing Fluent case while preserving solver settings and boundary conditions.

:ref:`write <write>`                                                                                                              Write files of various types. The file type can be case, data, or case-data.

:ref:`write_case <write_case>`                                                                                   Write a case file. The case file contains the mesh, boundary conditions, and solver settings.

:ref:`write_data <write_data>`                                                                                                       Write a data file. The data file contains the solution data for the case.

:ref:`write_case_data <write_case_data>`                   Write case and data file. The case file contains the mesh, boundary conditions, solver settings, and data file contains solution data for the case.

:ref:`read_settings <read_settings>`                                                                                                                     Read and set boundary conditions from specified file.

:ref:`read_field_functions <read_field_functions>`                                                                                                         Read custom field-function definitions from a file.

:ref:`read_injections <read_injections>`                                                                                                                                  Read all DPM injections from a file.

:ref:`read_profile <read_profile>`                                                                                                           Read boundary profile data (\*.prof, \*.csv). Default is \*.prof.

:ref:`read_pdf <read_pdf>`                                                                                                           Reads a Probability Density Function (PDF) table for combustion modeling.

:ref:`read_isat_table <read_isat_table>`                                                                            Loads an ISAT (In Situ Adaptive Tabulation) table for accelerating combustion simulations.

:ref:`show_configuration <show_configuration>`                                                                                                                Display current release and version information.

:ref:`stop_macro <stop_macro>`                                                                                                                                                Stop recording input to a macro.

:ref:`start_transcript <start_transcript>`                                                                                                                         Start recording input and output in a file.

:ref:`stop_transcript <stop_transcript>`                                                                                                        Stop recording input and output and close the transcript file.

:ref:`data_file_options <data_file_options>`                                                                                                                Set derived quantities to be written in data file.

:ref:`beta_settings <beta_settings>`                                                                                                                          Enable access to beta features in the interface.

====================================================   =======================================================================================================================================================

.. rubric:: Included in:

======================   ==================

Parent                              Summary

======================   ==================
:ref:`root <ref_root>`       'root' object.

======================   ==================

